# jutils

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/hostname/: CMakeLists.txt  hostname.cc
src/pwd/: CMakeLists.txt  pwd.cc
src/rmdir/: CMakeLists.txt  rmdir.cc
src/sleep/: CMakeLists.txt  sleep.cc
src/whoami/: CMakeLists.txt  whoami.cc
src/yes/: CMakeLists.txt  yes.cc
